# RivalGrounds

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  clean.sh  run.sh
src/: main.cpp  xmain.cpp
src/Graphics/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Window.cpp  Window.h
src/shaders/: default.frag  default.vert
